--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </main>
 
     <footer>
-
+        <p class="text-center py-5">©2021. NextBuy . All rights reserved - itspeomd.</p>
     </footer>
 </body>
 
